test/invalid/baseline/tostring.txt
Syntax error at line 2:
  DOMString toString
            ^ toString is a reserved identifier and must not be used.
